fix overflow issue: dienstleistungen.html

--- a/public/critical.css
+++ b/public/critical.css
@@ -113,6 +113,8 @@ body {
     padding-bottom: 25rem;
 }
 
+main {max-width: 100vw;}
+
 body::before {
     content: "";
     position: fixed;
